[project]
name = "legal-actions-dashboard"
version = "0.1.0"
description = "Interactive Dash dashboard for tracking and analyzing legal actions against companies across different industries"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.9.3",
    "dash-bootstrap-components>=1.7.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]
